Styling the reservation form component

--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -1,6 +1,6 @@
 <app-home></app-home>
 
-<h2>Reservation List</h2>
+<h3 class="mt-5 mb-3">Reservation List</h3>
 
 <ul *ngIf="reservations.length; else noReservation">
     <li *ngFor="let reservation of reservations">
