--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -2,17 +2,31 @@
 
 <h3 class="mt-5 mb-3">Reservation List</h3>
 
-<ul *ngIf="reservations.length; else noReservation">
-    <li *ngFor="let reservation of reservations">
-        Guest: {{ reservation.guestName }} <br>
-        Email: {{ reservation.guestEmail }} <br>
-        Room No.: {{ reservation.roomNumber }} <br>
-        Check-In: {{ reservation.checkInDate }} <br>
-        Check-Out: {{ reservation.checkOutDate }} <br>
-        <button (click)="deleteReservation(reservation.id)">Delete</button>
-        <button [routerLink]="['/edit', reservation.id]">Edit</button>
-    </li>
-</ul>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Guest</th>
+            <th scope="col">Email</th>
+            <th scope="col">Room No.</th>
+            <th scope="col">Check-In</th>
+            <th scope="col">Check-Out</th>
+            <th scope="col">Actions</th>
+        </tr>
+    </thead>
+    <tbody *ngIf="reservations.length; else noReservation">
+        <tr *ngFor="let reservation of reservations">
+            <td>{{ reservation.guestName }}</td>
+            <td>{{ reservation.guestEmail }}</td>
+            <td>{{ reservation.roomNumber }}</td>
+            <td>{{ reservation.checkInDate }}</td>
+            <td>{{ reservation.checkOutDate }}</td>
+            <td>
+                <button class="btn btn-sm btn-danger mx-1" (click)="deleteReservation(reservation.id)">Delete</button>
+                <button class="btn btn-sm btn-secondary mx-1" [routerLink]="['/edit', reservation.id]">Edit</button>
+            </td>
+        </tr>
+    </tbody>
+</table>
 
 <ng-template #noReservation>
     <p>No reservation available.</p>
